# mem-leak-checker

./: .gitignore  Makefile.am  README.md  configure.ac  mem-leak-checker.pro  my-malloc.graphml
common-headers/: common-enums.h
doc/: my-malloc.graphml
malloc-lib/: .directory  Makefile.am  config.h  data-chunk-storage.cpp  data-chunk-storage.h  data-chunk-types.h  debug.cpp  debug.h  malloc-lib.pro  memory-hooks.cpp  my-malloc.cpp  original-memory-fnc-pointers.h
malloc-lib-posprocess/: Makefile.am  main.cpp  malloc-lib-posprocess.pro  string-utils.cpp  string-utils.h
test-app/: Makefile.am  main.cpp  test-app.pro  test.sh
