lib_LTLIBRARIES = libmalloc-lib.la
libmalloc_lib_la_SOURCES = memory-hooks.cpp \
                           data-chunk-storage.cpp
libmalloc_lib_la_LDFLAGS = -version-info 0:0:0
noinst_HEADERS = config.h \
                 data-chunk-storage.h \
                 data-chunk-types.h \
                 original-memory-fnc-pointers.h
