lib_LTLIBRARIES = libmalloc-lib.la
libmalloc_lib_la_SOURCES = memory-hooks.cpp \
                           data-chunk-storage.cpp \
                           debug.cpp \
                           debug.h \
                           config.h \
                           data-chunk-storage.h \
                           data-chunk-types.h \
                           original-memory-fnc-pointers.h
libmalloc_lib_la_LDFLAGS = -version-info 0:0:0
